kube-pr/web-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: blazor-web-deployment
  labels:
    app: blazor-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blazor-web
  template:
    metadata:
      labels:
        app: blazor-web
    spec:
      containers:
      - name: blazor-web
        image: 144.17.92.12:5000/alex/blazor-web:${RUN_SALT}
        ports:
        - containerPort: 8080
