kube-pr/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${NAMESPACE}
  name: blazor-web-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ${PULL_REQUEST_ID}.alex-kube.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blazor-web-service
            port:
              number: 80
  - host: ${PULL_REQUEST_ID}.alex-kube-ts.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blazor-web-service
            port:
              number: 80
